# FunkyGameBot

./: .env  .gitignore  Makefile  README.md  TODO.md  database_schema.md
.github/workflows/: server-workflow.yml  standard_workflow.archive  standard_workflow.yml
basic_command_bot/: .env  .gitignore  Cargo.toml  Changelog.md  Changelog.txt  db.sqlite  my_database.db
basic_command_bot/my_database/: db  snap.0000000000000079
basic_command_bot/src/: admin.rs  database.rs  enums.rs  main.rs
basic_command_bot/src/commands/: admin_commands.rs  basic_commands.rs  changelogread.rs  dev_commands.rs  grp_broadcast_commands.rs  mod.rs  playing_commands.rs  registration_commands.rs  season.rs
basic_command_bot/src/gamefunctions/: mod.rs  season.rs
rust_telegram_bot/: Cargo.toml
rust_telegram_bot/src/: main.rs
second_bot/: Cargo.toml
test_bot/: Cargo.toml
test_bot/src/: admin.rs  admin_commands.rs  basic_commands.rs  database.rs  dev_commands.rs  main.rs
third_bot/: Cargo.toml  Dockerfile  db.sqlite  docker-compose.yml
third_bot/src/: main.rs
utils/dockerfiles/: example.yml
