[package]
name = "basic_command_bot"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
teloxide = { version = "0.12", features = ["macros", "bincode-serializer",  "sqlite-storage"] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4.0"
serde = "1"

